resized line length

--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Clock</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
-<section class="section" id="fullpage">
+        <section class="section" id="fullpage">
     <div class="container" id="clock">
-        <h1 id="time">time</h1><h1 id="ampm">am</h1>
+        <h1 id="time">time</h1>
+        <h1 id="ampm">am</h1>
     </div>
     <div class="container" id="colorpickers">
             <span class="colorpicker">
-                <label for="bgcolor">Background color:</label>
-                <input type="color" id="bgcolor" name="bgcolor" , value="#0A0A0A">
+                <label for="bgcolor">Background Color:</label>
+                <input type="color" id="bgcolor" name="bgcolor", value="#0A0A0A">
             </span>
         <span class="colorpicker">
-                <label for="txtcolor">Text color:</label>
-                <input type="color" id="txtcolor" name="txtcolor" , value="#7DD2DC">
+                <label for="txtcolor">Text Color:</label>
+                <input type="color" id="txtcolor" name="txtcolor", value="#7DD2DC">
             </span>
     </div>
-</section>
+        </section>
 
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
